Add reference Mac OS resource binaries

--- a/.gitignore
+++ b/.gitignore
@@ -9,18 +9,22 @@ unittest/main
 results.xml
 /latex
 tests/1_hello/*
+!tests/1_hello/ref
 !tests/1_hello/*.s
 !tests/1_hello/Makefile
 !tests/1_hello/Bakefile
 tests/2_asm/*
+!tests/2_asm/ref
 !tests/2_asm/*.s
 !tests/2_asm/Makefile
 !tests/2_asm/Bakefile
 tests/3_extern/*
+!tests/3_extern/ref
 !tests/3_extern/*.s
 !tests/3_extern/Makefile
 !tests/3_extern/Bakefile
 tests/4_ctest/*
+!tests/4_ctest/ref
 !tests/4_ctest/*.c
 !tests/4_ctest/Makefile
 !tests/4_ctest/Bakefile
