Rename elements, streamline includes
* LinkerManager is now SegmentManager, linker_manager.* are now segment_manager.*
* ExportedName is now ExportedSymbolName, symbol.* are now symbol_name.*
* Execable is now Executable
* unittest required invalid read, temporary fix

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -1,5 +1,5 @@
 
-LINKER_HEADERS=$(addprefix ../src/linker/, buffer.h format.h image.h linker_manager.h location.h module.h module_collector.h position.h reader.h reference.h relocation.h resolution.h section.h segment.h symbol.h symbol_definition.h target.h writer.h)
+LINKER_HEADERS=$(addprefix ../src/linker/, buffer.h format.h image.h location.h module.h module_collector.h position.h reader.h reference.h relocation.h resolution.h section.h segment.h segment_manager.h symbol_definition.h symbol_name.h target.h writer.h)
 LINKER_CXXFILES=$(LINKER_HEADERS:.h=.cc)
 LINKER_OFILES=$(LINKER_CXXFILES:.cc=.o)
 
