--- a/tests/win16api/window/Makefile
+++ b/tests/win16api/window/Makefile
@@ -13,7 +13,7 @@ main.exe: init.o main.o libc.o
 	Link -Fwin16 $^ -o $@ -d.entry=_start
 
 %.o: %.c windows.h
-	ia16-elf-gcc -c -mcmodel=small -mprotected-mode $< -o $@
+	ia16-elf-gcc -c -mcmodel=small -mprotected-mode $< -o $@ #-mno-callee-assume-ds-ss
 
 %.o: %.s
 	ia16-elf-as $< -o $@
