--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ tests/win16api/msgbox/main.exe
 tests/win16api/window/main.exe
 tests/dll/win16/lib.dll
 tests/dll/win16/main.exe
+tests/dll/win32/lib.dll
+tests/dll/win32/main.exe
