--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -15,7 +15,7 @@ SCRIPT_HEADERS=../src/script/script.h
 SCRIPT_CXXFILES=../src/script/scan.cc ../src/script/parse.tab.cc
 SCRIPT_OFILES=$(SCRIPT_CXXFILES:.cc=.o)
 
-MAIN_HEADERS=../src/common.h
+MAIN_HEADERS=../src/common.h ../src/unicode.h
 MAIN_CXXFILES=$(MAIN_HEADERS:.h=.cc)
 MAIN_OFILES=$(MAIN_CXXFILES:.cc=.o)
 
@@ -26,7 +26,7 @@ CXXFLAGS+= -g
 
 all: main
 
-main: main.cc $(MAIN_OFILES) $(LINKER_OFILES) $(FORMAT_OFILES) $(DUMPER_OFILES) $(SCRIPT_OFILES) linker/*.cc format/*.cc
+main: main.cc $(MAIN_OFILES) $(LINKER_OFILES) $(FORMAT_OFILES) $(DUMPER_OFILES) $(SCRIPT_OFILES) unicode.cc linker/*.cc format/*.cc
 	$(CXX) -o main main.cc $(MAIN_OFILES) $(LINKER_OFILES) $(FORMAT_OFILES) $(DUMPER_OFILES) $(SCRIPT_OFILES) -lcppunit $(CXXFLAGS)
 
 clean:
