--- a/.gitignore
+++ b/.gitignore
@@ -29,11 +29,11 @@ tests/4_ctest/*
 !tests/4_ctest/*.c
 !tests/4_ctest/Makefile
 !tests/4_ctest/Bakefile
-tests/5_gui/*
-!tests/5_gui/ref
-!tests/5_gui/*.c
-!tests/5_gui/Makefile
-!tests/5_gui/Bakefile
+tests/gui/*
+!tests/gui/ref
+!tests/gui/*.c
+!tests/gui/Makefile
+!tests/gui/Bakefile
 tests/watcom/w
 tests/watcom/l
 tests/rsx/z80/*
