--- a/tests/gui/Makefile
+++ b/tests/gui/Makefile
@@ -1,16 +1,22 @@
 
 all:
-	python3 ../../bake.py
-
-.PHONY: all clean distclean verify
+	make -C win16
+	make -C win32
+	make -C win64
 
 clean:
-	python3 ../../bake.py clean
+	make -C win16 clean
+	make -C win32 clean
+	make -C win64 clean
 
 distclean: clean
 	rm -rf *~
+	make -C win16 distclean
+	make -C win32 distclean
+	make -C win64 distclean
+
+.PHONY: all clean distclean verify
 
 verify: all
-	for file in ref/*; do diff $$file `basename $$file`; done
-	#for file in ref/.rsrc/*; do diff $$file .rsrc/`basename $$file`; done
+	for file in ref/*/*; do diff $$file $${file#ref/}; done
 
