--- a/tests/gui/win32/Makefile
+++ b/tests/gui/win32/Makefile
@@ -8,7 +8,7 @@ distclean: clean
 	rm -rf *~
 
 main.exe: main.o
-	../../../link -Fwin32 $< -o $@ -d.entry=_start
+	../../../link -Fwin32 $< -o $@ -d.entry=_start -Starget=win32s -Ssubsystem=windows -Simport_thunks
 
 %.o: %.s
 	i686-elf-as -msyntax=intel -mnaked-reg $< -o $@
