--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,12 @@ tests/gui/win64/*
 !tests/gui/*/Makefile
 !tests/gui/*/main.s
 !tests/gui/Makefile
-!tests/gui/Bakefile
-tests/watcom/w
-tests/watcom/l
+tests/dll/win16/*
+tests/dll/win32/*
+tests/dll/win64/*
+!tests/dll/*/Makefile
+!tests/dll/*/main.s
+!tests/dll/*/lib.s
 tests/rsx/z80/*
 !tests/rsx/z80/rsx1.s
 !tests/rsx/z80/rsx2.s
@@ -50,11 +53,7 @@ tests/rsx/i86/*
 !tests/rsx/i86/main.s
 !tests/rsx/i86/common.s
 !tests/rsx/i86/Makefile
+tests/watcom/w
+tests/watcom/l
 tests/win16api/msgbox/main.exe
 tests/win16api/window/main.exe
-tests/dll/win16/lib.dll
-tests/dll/win16/main.exe
-tests/dll/win32/lib.dll
-tests/dll/win32/main.exe
-tests/dll/win64/lib.dll
-tests/dll/win64/main.exe
