Reorganize GUI and DLL tests
* Add and update reference binaries
* Use message boxes in DLL example instead of writing to console
* Generate import thunks for win32/win64
* Put import macros in the beginning of assembly files
* Use CALLFAR macro in 16-bit GUI example

--- a/tests/dll/Makefile
+++ b/tests/dll/Makefile
@@ -16,7 +16,7 @@ distclean: clean
 	make -C win64 distclean
 
 verify:
-	#make -C win16 verify
-	#make -C win32 verify
-	#make -C win64 verify
+	for file in ref/*/*; do diff $$file $${file#ref/}; done
+
+.PHONY: all clean distclean verify
 
