--- a/tests/dll/win64/Makefile
+++ b/tests/dll/win64/Makefile
@@ -8,10 +8,10 @@ distclean: clean
 	rm -rf *~
 
 main.exe: main.o
-	../../../link -Fwin64 $< -o $@ -d.entry=_start
+	../../../link -Fwin64 $< -o $@ -d.entry=_start -Starget=winnt -Ssubsystem=windows -Simport_thunks
 
 lib.dll: lib.o
-	../../../link -Fwin64 -Soutput=dll $< -o $@ -d.entry=_start
+	../../../link -Fwin64 -Soutput=dll $< -o $@ -d.entry=_start -Starget=winnt -Ssubsystem=windows -Simport_thunks
 
 %.o: %.s
 	x86_64-elf-as -msyntax=intel -mnaked-reg $< -o $@
