--- a/tests/dll/win32/Makefile
+++ b/tests/dll/win32/Makefile
@@ -8,10 +8,10 @@ distclean: clean
 	rm -rf *~
 
 main.exe: main.o
-	../../../link -Fwin32 $< -o $@ -d.entry=_start
+	../../../link -Fwin32 $< -o $@ -d.entry=_start -Starget=win32s -Ssubsystem=windows -Simport_thunks
 
 lib.dll: lib.o
-	../../../link -Fwin32 -Soutput=dll $< -o $@ -d.entry=_start
+	../../../link -Fwin32 -Soutput=dll $< -o $@ -d.entry=_start -Starget=win32s -Ssubsystem=windows -Simport_thunks
 
 %.o: %.s
 	i686-elf-as -msyntax=intel -mnaked-reg $< -o $@
