--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ tests/4_ctest/*
 tests/gui/win16/*
 tests/gui/win32/*
 tests/gui/win64/*
+tests/gui/os2v1/*
 !tests/gui/*/Makefile
 !tests/gui/*/main.s
 !tests/gui/Makefile
